make order request
