# API/CoffeeClub.Domain/Dtos/Response/OrderCreatedDto.cs
@@ -1,0 +1,6 @@
+namespace CoffeeClub.Domain.Dtos.Response;
+
+public record OrderCreatedDto
+{
+    public required Guid Id { get; init; }
+}
